Cria serviço de listar atividades

--- a/index.html
+++ b/index.html
@@ -534,6 +534,7 @@
       <!-- Angular Material requires Angular.js Libraries -->
       <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
       <script src="js/app.js"></script>
+      <script src="js/model/atividades.model.js"></script>
 
 
       </body>
